added loader and some other things

--- a/src/components/elements/PeiButton/index.module.css
+++ b/src/components/elements/PeiButton/index.module.css
@@ -4,6 +4,8 @@
   border: none;
   border-radius: 8px;
   font-size: 18px;
+  min-width: 100px;
+  transition: all 0.3s;
 }
 .button:hover,
 .purpleButton:hover {
