--- a/src/components/Auth/index.module.css
+++ b/src/components/Auth/index.module.css
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: center;
 }
+.loader {
+  height: 20px;
+  width: 20px;
+}
 .form {
   max-width: 400px;
   width: 400px;
@@ -25,6 +29,13 @@
   display: block;
   text-align: center;
   width: 80%;
+}
+.account {
+  margin-top: 20px;
+  color: white;
+}
+.account a {
+  color: white;
 }
 @media screen and (max-width: 600px) {
   .form {
