--- a/src/components/Dashboard/index.module.css
+++ b/src/components/Dashboard/index.module.css
@@ -132,7 +132,7 @@
     visibility: hidden;
   }
 }
-@media screen and (max-width: 850px) {
+@media screen and (min-width: 550px) and (max-width: 850px) {
   .nav {
     width: 40vw;
     height: 100vh;
