--- a/src/components/Accounts/index.module.css
+++ b/src/components/Accounts/index.module.css
@@ -1,6 +1,6 @@
 .user {
   background-color: white;
-  padding: 60px;
+  padding: 40px;
   text-align: left;
   border-radius: 0 0 50px 50px;
   box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.493);
@@ -9,7 +9,15 @@
 .user h1 {
   margin-top: 0;
   color: var(--primary-color);
+  margin-left: 30px;
 }
 .user p {
   color: var(--primary-color);
+  margin-left: 30px;
+}
+.empty {
+  color: rgb(216, 211, 211);
+}
+.empty a {
+  color: rgb(216, 211, 211);
 }
