--- a/src/components/AddAccount/index.module.css
+++ b/src/components/AddAccount/index.module.css
@@ -1,7 +1,7 @@
 .container {
-  margin-top: 40px;
+  /* margin-top: 40px; */
   background-color: white;
-  width: 90%;
+  width: 70%;
   border-radius: 50px 50px 0 0;
   padding: 40px 30px;
   text-align: left;
