--- a/src/components/Dashboard/index.module.css
+++ b/src/components/Dashboard/index.module.css
@@ -6,8 +6,9 @@
   left: 15px;
   z-index: 3;
   padding: 4px;
-  border: 0.5px solid #fff;
-  border-radius: 4px;
+  /* border: 0.5px solid #fff;
+  border-radius: 4px; */
+  border: none;
   transition: 0.3s;
 }
 .menubtn:hover,
@@ -22,9 +23,9 @@
   /* justify-content: center; */
   z-index: 0;
 }
-.active {
+/* .active {
   border-color: var(--primary-color) !important;
-}
+} */
 .btnline,
 .activebtnline {
   width: 25px;
