updated front end

--- a/src/components/TempLandingPage/index.module.css
+++ b/src/components/TempLandingPage/index.module.css
@@ -6,24 +6,56 @@
   justify-content: flex-end;
   height: 55px;
   width: 100%;
-  background-color: darkslateblue;
+  /* background-color: darkslateblue; */
+}
+.heading {
+  font-size: 60px;
+  color: darkslateblue;
+}
+.content {
+  padding-left: 30px;
+  flex: 5;
+}
+.content h1 {
+  padding-top: 30px;
+  margin-bottom: 0;
+}
+.content h2 {
+  color: rgba(71, 61, 139, 0.808);
+}
+.home_link {
+  background-color: white !important;
+  border-bottom: 2px solid darkslateblue;
+  border-radius: 0 !important;
+  color: darkslateblue !important;
 }
 .nav_bar a {
   color: white;
   margin: 15px 10px;
   font-size: 16.5px;
   text-decoration: none;
+  background-color: darkslateblue;
+  padding: 10px 20px;
+  border-radius: 8px;
 }
 .nav_bar a:hover {
-  color: darkcyan;
+  color: rgb(226, 225, 225);
+}
+.started {
+  display: none;
 }
 .front_content {
-  width: 40%;
+  width: 100vw;
+  display: flex;
   height: 200px;
 }
 .front_content img {
-  width: 100%;
-  height: auto;
+  width: 600px;
+  height: 600px;
+  align-self: flex-start;
+  margin-left: auto;
+  margin-right: 70px;
+  flex: 1;
 }
 .loaderContainer {
   height: 100vh;
@@ -38,4 +70,65 @@
 .loaderContainer > div > p {
   color: var(--primary-color);
   margin: 0;
+}
+
+@media screen and (max-width: 1083px) {
+  .front_content img {
+    width: 500px;
+    height: 500px;
+    align-self: flex-start;
+    margin-left: auto;
+    margin-right: 70px;
+    flex: 1;
+  }
+  .front_content {
+    margin-top: 50px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .front_content img {
+    width: 450px;
+    height: 450px;
+    align-self: flex-start;
+    margin-left: auto;
+    margin-right: 70px;
+    flex: 1;
+  }
+  .front_content {
+    margin-top: 50px;
+  }
+  .content h1 {
+    font-size: 40px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .front_content img {
+    display: none;
+  }
+  .front_content {
+    margin-top: 50px;
+  }
+  .content h1 {
+    font-size: 50px;
+  }
+  .content h2 {
+    line-height: 40px;
+  }
+  .nav_bar {
+    justify-content: center;
+    padding-top: 10px;
+  }
+  .front_content {
+    flex-direction: column;
+  }
+  .started {
+    display: inline-block;
+    color: white;
+    margin: 15px 0px;
+    font-size: 16.5px;
+    text-decoration: none;
+    background-color: darkslateblue;
+    padding: 15px 20px;
+    border-radius: 8px;
+  }
 }
