--- a/src/components/TempLandingPage/index.module.css
+++ b/src/components/TempLandingPage/index.module.css
@@ -85,6 +85,18 @@
     margin-top: 50px;
   }
 }
+
+@media screen and (min-width: 1083px) {
+  .front_content img {
+    width: 600px;
+    height: 600px;
+    align-self: flex-start;
+    margin-left: auto;
+    margin-right: 70px;
+    flex: 1;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .front_content img {
     width: 450px;
